--- a/Pescadores/build.gradle
+++ b/Pescadores/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     maven { url = 'https://central.sonatype.com/repository/maven-snapshots/' }
   }
   dependencies {
-    classpath "com.android.tools.build:gradle:8.6.1"
+    classpath 'com.android.tools.build:gradle:8.13.2'
 
   }
 }
